--- a/Service/src/Dt.Cm/Dt.Cm.csproj
+++ b/Service/src/Dt.Cm/Dt.Cm.csproj
@@ -8,6 +8,10 @@
     <DocumentationFile>bin\Debug\netcoreapp3.1\Dt.Cm.xml</DocumentationFile>
     <NoWarn>1701;1702;1705;1591</NoWarn>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Content Include="..\..\..\Client\Common\实体类模板.txt" Link="实体类模板.txt" />
+  </ItemGroup>
   
   <ItemGroup>
     <ProjectReference Include="..\Dt.Core\Dt.Core.csproj" />
