可通过service.json配置生成模型文件

--- a/Service/src/Dt.Cm/Dt.Cm.csproj
+++ b/Service/src/Dt.Cm/Dt.Cm.csproj
@@ -11,6 +11,9 @@
 
   <ItemGroup>
     <Content Include="..\..\..\Client\Common\实体类模板.txt" Link="实体类模板.txt" />
+    <Content Include="..\..\k8s\global.json" Link="etc\config\global.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   
   <ItemGroup>
