--- a/Service/src/Dt.Msg/Dt.Msg.csproj
+++ b/Service/src/Dt.Msg/Dt.Msg.csproj
@@ -10,6 +10,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Include="..\..\k8s\global.json" Link="etc\config\global.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Dt.Core\Dt.Core.csproj" />
   </ItemGroup>
 </Project>
