基础选项管理

--- a/Client/Dt.Core/Dt.Core.csproj
+++ b/Client/Dt.Core/Dt.Core.csproj
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Include="..\..\Service\src\Dt.Cm\SqliteModel\OmColumn.cs" Link="Internal\SqliteModel\OmColumn.cs" />
+    <Compile Include="..\..\Service\src\Dt.Core\Internal\Sqlite\Model\OmColumn.cs" Link="Internal\SqliteModel\OmColumn.cs" />
     <Compile Include="..\..\Service\src\Dt.Core\Base\Collection\Dict.cs" Link="Base\Collection\Dict.cs" />
     <Compile Include="..\..\Service\src\Dt.Core\Base\Collection\Table\Cell.cs" Link="Base\Collection\Table\Cell.cs" />
     <Compile Include="..\..\Service\src\Dt.Core\Base\Collection\Table\CellList.cs" Link="Base\Collection\Table\CellList.cs" />
@@ -40,8 +40,8 @@
     <Compile Include="..\..\Service\src\Dt.Core\Internal\Serialize\JsonRpcSerializer.cs" Link="Internal\Serialize\JsonRpcSerializer.cs" />
     <Compile Include="..\..\Service\src\Dt.Core\Internal\Serialize\RpcJson.cs" Link="Internal\Serialize\RpcJson.cs" />
     <Compile Include="..\..\Service\src\Dt.Core\Internal\Serialize\SerializeTypeAlias.cs" Link="Internal\Serialize\SerializeTypeAlias.cs" />
-    <Compile Include="..\..\Service\src\Dt.Core\Internal\Sqlite\SqliteAttributes.cs" Link="Internal\Sqlite\SqliteAttributes.cs" />
-    <Compile Include="..\..\Service\src\Dt.Core\Internal\Sqlite\TableMapping.cs" Link="Internal\Sqlite\TableMapping.cs" />
+    <Compile Include="..\..\Service\src\Dt.Core\Internal\Sqlite\Base\SqliteAttributes.cs" Link="Internal\Sqlite\SqliteAttributes.cs" />
+    <Compile Include="..\..\Service\src\Dt.Core\Internal\Sqlite\Base\TableMapping.cs" Link="Internal\Sqlite\TableMapping.cs" />
     <Compile Include="..\..\Service\src\Dt.Core\Rpc\Client\DuplexStream.cs" Link="Rpc\DuplexStream.cs" />
     <Compile Include="..\..\Service\src\Dt.Core\Rpc\Client\PushStreamContent.cs" Link="Rpc\PushStreamContent.cs" />
     <Compile Include="..\..\Service\src\Dt.Core\Rpc\Client\RequestWriter.cs" Link="Rpc\RequestWriter.cs" />
