完成用户参数功能

--- a/Client/Dt.App/Dt.App.csproj
+++ b/Client/Dt.App/Dt.App.csproj
@@ -18,6 +18,7 @@
     <UpToDateCheckInput Remove="Model\Params\MyParamsSetting.xaml" />
     <UpToDateCheckInput Remove="Model\Params\SelectUserDlg.xaml" />
     <UpToDateCheckInput Remove="Model\Params\UserParamsDlg.xaml" />
+    <UpToDateCheckInput Remove="Model\Params\UserParamsMgr.xaml" />
   </ItemGroup>
 
   <ItemGroup>
