--- a/Client/Dt.Shell.Droid/Dt.Shell.Droid.csproj
+++ b/Client/Dt.Shell.Droid/Dt.Shell.Droid.csproj
@@ -108,9 +108,9 @@
       <Project>{25744ee1-b117-4141-b9a8-5ca1cbebcd98}</Project>
       <Name>Dt.Sample</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Fz\Dt.Fz.csproj">
+    <ProjectReference Include="..\Oa\Dt.Oa.csproj">
       <Project>{e9c48931-cc12-4f49-8fbb-ebefc628dfc6}</Project>
-      <Name>Dt.Fz</Name>
+      <Name>Dt.Oa</Name>
     </ProjectReference>
     <!--修改Excel或Chart时引用项目-->
     <!--<ProjectReference Include="..\Dt.Cells.Data\Dt.Cells.Data.csproj">
