--- a/Client/Dt.Shell.Wasm/Dt.Shell.Wasm.csproj
+++ b/Client/Dt.Shell.Wasm/Dt.Shell.Wasm.csproj
@@ -68,6 +68,6 @@
     <ProjectReference Include="..\Dt.Base\Dt.Base.csproj" />
     <ProjectReference Include="..\Dt.Core\Dt.Core.csproj" />
     <ProjectReference Include="..\Dt.Sample\Dt.Sample.csproj" />
-    <ProjectReference Include="..\Fz\Dt.Fz.csproj" />
+    <ProjectReference Include="..\Oa\Dt.Oa.csproj" />
   </ItemGroup>
 </Project>
