服务端升级到.net5.0，同步升级引用包；客户端Uno升级到3.1.6，目前3.2.0以后版本有问题

--- a/Client/Dt.App/Dt.App.csproj
+++ b/Client/Dt.App/Dt.App.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="MSBuild.Sdk.Extras/2.0.54">
+﻿<Project Sdk="MSBuild.Sdk.Extras/3.0.22">
 
   <PropertyGroup>
     <Description>DT框架库</Description>
@@ -7,7 +7,7 @@
   <Import Project="..\Common\dtc.props" />
 
   <ItemGroup>
-    <Content Include="..\Common\实体类模板.txt" Link="实体类模板.txt" />
+    <None Include="..\Common\实体类模板.txt" Link="实体类模板.txt" />
   </ItemGroup>
 
   <ItemGroup>
