--- a/Client/Dt.Shell.iOS/Dt.Shell.iOS.csproj
+++ b/Client/Dt.Shell.iOS/Dt.Shell.iOS.csproj
@@ -127,7 +127,7 @@
     <Reference Include="Xamarin.iOS" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Uno.UI" Version="3.1.0-dev.288" />
+    <PackageReference Include="Uno.UI" Version="3.1.6" />
     <PackageReference Include="Dt.Cells" Version="2.0.0" />
   </ItemGroup>
   <ItemGroup>
