--- a/Client/Dt.Shell.Wasm/Dt.Shell.Wasm.csproj
+++ b/Client/Dt.Shell.Wasm/Dt.Shell.Wasm.csproj
@@ -2,10 +2,11 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
+    <NetCoreWasmSDKUri>d:\dt\client\Common\wasm\dotnet-runtime-wasm-dec3fff-22584-Release.zip</NetCoreWasmSDKUri>
     <!-- 两种模式的sdk，必须完整路径 -->
-    <MonoWasmSDKUri>d:\dt\client\Common\wasm\mono-wasm-610.zip</MonoWasmSDKUri>
-    <MonoWasmAOTSDKUri>d:\dt\client\Common\wasm\mono-wasm-610-aot.zip</MonoWasmAOTSDKUri>
+    <!--<MonoWasmSDKUri>d:\dt\client\Common\wasm\mono-wasm-610.zip</MonoWasmSDKUri>-->
+    <!--<MonoWasmAOTSDKUri>d:\dt\client\Common\wasm\mono-wasm-610-aot.zip</MonoWasmAOTSDKUri>-->
     <WasmHead>true</WasmHead>
     <DefineConstants>$(DefineConstants);__WASM__</DefineConstants>
     <NoWarn>NU1701</NoWarn>
@@ -50,9 +51,9 @@
     <!-- Note that for WebAssembly version 1.1.1 of the console logger required -->
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.1.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Filter" Version="1.1.1" />
-    <PackageReference Include="Uno.UI.WebAssembly" Version="3.1.0-dev.288" />
-    <PackageReference Include="Uno.Wasm.Bootstrap" Version="1.4.0-dev.32" />
-    <PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="1.4.0-dev.32" />
+    <PackageReference Include="Uno.UI.WebAssembly" Version="3.4.0" />
+    <PackageReference Include="Uno.Wasm.Bootstrap" Version="2.0.0-dev.125" />
+    <PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="2.0.0-dev.125" />
   </ItemGroup>
 
   <ItemGroup>
