--- a/Client/Common/Dtc.props
+++ b/Client/Common/Dtc.props
@@ -40,11 +40,11 @@
     <ProjectReference Include="..\Dt.Cells\Dt.Cells.csproj" />-->
   </ItemGroup>
 
-  <ItemGroup Condition="'$(TargetFramework)'=='xamarinios10' or '$(TargetFramework)'=='monoandroid10.0' or '$(TargetFramework)'=='net5.0' ">
-    <PackageReference Include="Uno.UI" Version="3.1.6" />
+  <ItemGroup Condition="'$(TargetFramework)' != 'uap10.0.18362' ">
+    <PackageReference Include="Uno.UI" Version="3.4.0" />
   </ItemGroup>
   
-  <ItemGroup Condition="'$(TargetFramework)'=='xamarinios10' or '$(TargetFramework)'=='monoandroid10.0' or '$(TargetFramework)'=='uap10.0.18362' ">
+  <ItemGroup Condition="'$(TargetFramework)' != 'net5.0' ">
     <PackageReference Include="System.Text.Json" Version="4.7.2" />
   </ItemGroup> 
   
