部署到iis的调试，fsm上传文件大小1g

--- a/.gitignore
+++ b/.gitignore
@@ -353,6 +353,7 @@ Service/src/Dt.Cm/etc/log/
 Service/src/Dt.Cm/etc/model/
 Service/src/Dt.Msg/etc/log/
 Service/src/Dt.Fsm/etc/log/
+Service/publish/
 Client/Common/wasm/
 Client/Common/nupkg/
 !Client/Dt.App/Publish/
