--- a/Service/src/Dt.Msg/Dt.Msg.csproj
+++ b/Service/src/Dt.Msg/Dt.Msg.csproj
@@ -5,9 +5,13 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>bin\Debug\netcoreapp3.1\Dt.Msg.xml</DocumentationFile>
+    <DocumentationFile>D:\Dt\Service\src\Dt.Msg\Dt.Msg.xml</DocumentationFile>
     <NoWarn>1701;1702;1705;1591</NoWarn>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Remove="Dt.Msg.xml" />
+  </ItemGroup>
 
   <ItemGroup>
     <Content Include="..\..\k8s\global.json" Link="etc\config\global.json">
@@ -18,4 +22,6 @@
   <ItemGroup>
     <ProjectReference Include="..\Dt.Core\Dt.Core.csproj" />
   </ItemGroup>
+
+  <ProjectExtensions><VisualStudio><UserProperties properties_4launchsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
 </Project>
