--- a/Service/src/Dt.Cm/Properties/launchSettings.json
+++ b/Service/src/Dt.Cm/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iis": {
-      "applicationUrl": "http://localhost/baisui/cm",
+      "applicationUrl": "https://localhost/baisui/cm",
       "sslPort": 0
     }
   },
