--- a/Service/src/Dt.Fsm/web.config
+++ b/Service/src/Dt.Fsm/web.config
@@ -5,7 +5,11 @@
       <handlers>
         <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModuleV2" resourceType="Unspecified" />
       </handlers>
-      <aspNetCore processPath="bin\Release\net5.0\Dt.Fsm.exe" arguments="" stdoutLogEnabled="false" stdoutLogFile=".\logs\stdout" hostingModel="inprocess" />
+      <aspNetCore processPath="bin\Debug\net5.0\Dt.Fsm.exe" arguments="" stdoutLogEnabled="false" stdoutLogFile=".\logs\stdout" hostingModel="inprocess">
+        <environmentVariables>
+          <environmentVariable name="ASPNETCORE_HTTPS_PORT" value="443" />
+        </environmentVariables>
+      </aspNetCore>
       <security>
         <requestFiltering>
           <!--上传限制1G，和service.json的MaxRequestBodySize相同-->
