--- a/.gitignore
+++ b/.gitignore
@@ -354,6 +354,7 @@ Service/src/Dt.Cm/etc/model/
 Service/src/Dt.Msg/etc/log/
 Service/src/Dt.Fsm/etc/log/
 Service/publish/
+!Service/iis/tls.pfx
 Client/Common/wasm/
 Client/Common/nupkg/
 !Client/Dt.App/Publish/
