--- a/Client/Common/Dtc.props
+++ b/Client/Common/Dtc.props
@@ -41,7 +41,7 @@
   </ItemGroup>
 
   <ItemGroup Condition="'$(TargetFramework)' != 'uap10.0.18362' ">
-    <PackageReference Include="Uno.UI" Version="3.4.0" />
+    <PackageReference Include="Uno.UI" Version="3.5.0-dev.223" />
   </ItemGroup>
   
   <ItemGroup Condition="'$(TargetFramework)' != 'net5.0' ">
