--- a/Client/Dt.Shell.Wasm/Dt.Shell.Wasm.csproj
+++ b/Client/Dt.Shell.Wasm/Dt.Shell.Wasm.csproj
@@ -50,9 +50,9 @@
     <!-- Note that for WebAssembly version 1.1.1 of the console logger required -->
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.1.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Filter" Version="1.1.1" />
-    <PackageReference Include="Uno.UI.WebAssembly" Version="3.4.0" />
-    <PackageReference Include="Uno.Wasm.Bootstrap" Version="2.0.0-dev.125" />
-    <PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="2.0.0-dev.125" />
+    <PackageReference Include="Uno.UI.WebAssembly" Version="3.5.0-dev.223" />
+    <PackageReference Include="Uno.Wasm.Bootstrap" Version="2.0.0-dev.148" />
+    <PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="2.0.0-dev.148" />
   </ItemGroup>
 
   <ItemGroup>
