--- a/Client/Dt.Shell.Wasm/Dt.Shell.Wasm.csproj
+++ b/Client/Dt.Shell.Wasm/Dt.Shell.Wasm.csproj
@@ -28,6 +28,7 @@
   <ItemGroup>
     <Content Include="Assets\SplashScreen.png" />
     <Content Include="Fonts\icon.woff2" />
+    <Content Include="Fonts\uno-fluentui-assets.woff2" />
     <EmbeddedResource Include="WasmCSS\Fonts.css" />
     <EmbeddedResource Include="WasmScripts\AppManifest.js" />
   </ItemGroup>
