wasm部署到iis，支持调试

--- a/Client/Dt.Shell.Wasm/Properties/launchSettings.json
+++ b/Client/Dt.Shell.Wasm/Properties/launchSettings.json
@@ -2,14 +2,14 @@
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
-    "iisExpress": {
-      "applicationUrl": "http://localhost:20200/",
+    "iis": {
+      "applicationUrl": "https://localhost/fz/ui",
       "sslPort": 0
     }
   },
   "profiles": {
-    "IIS Express": {
-      "commandName": "IISExpress",
+    "IIS": {
+      "commandName": "IIS",
       "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
