--- a/Client/Dt.Shell.iOS/Info.plist
+++ b/Client/Dt.Shell.iOS/Info.plist
@@ -45,19 +45,24 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
-  <key>UIStatusBarStyle</key>
-  <string>UIStatusBarStyleLightContent</string>
+	<key>UIStatusBarStyle</key>
+	<string>UIStatusBarStyleLightContent</string>
 	<key>XSAppIconAssets</key>
 	<string>Assets.xcassets/AppIcons.appiconset</string>
-  <key>UILaunchStoryboardName</key>
-  <string>LaunchScreen</string>
-  <key>LSSupportsOpeningDocumentsInPlace</key>
-  <true/>
-  <key>NSMicrophoneUsageDescription</key>
-  <string>请求使用麦克风进行录音</string>
-  <key>NSCameraUsageDescription</key>
-  <string>请求使用摄像头进行拍照</string>
-  <key>CFBundleDevelopmentRegion</key>
-  <string>China</string>
+	<key>UILaunchStoryboardName</key>
+	<string>LaunchScreen</string>
+	<key>LSSupportsOpeningDocumentsInPlace</key>
+	<true/>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>请求使用麦克风进行录音</string>
+	<key>NSCameraUsageDescription</key>
+	<string>请求使用摄像头进行拍照</string>
+	<key>CFBundleDevelopmentRegion</key>
+	<string>China</string>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 </dict>
 </plist>
