--- a/Client/Dt.Shell.Wasm/web.config
+++ b/Client/Dt.Shell.Wasm/web.config
@@ -5,7 +5,7 @@
       <handlers>
         <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModuleV2" resourceType="Unspecified" />
       </handlers>
-      <aspNetCore processPath="C:\Program Files\dotnet\dotnet.exe" arguments="&quot;C:\Users\Daoting\.nuget\packages\uno.wasm.bootstrap.devserver\2.1.0-dev.25\build\../tools/server/net5/dotnet-unowasm.dll&quot; serve   --pathbase &quot;D:\Dt\Client\Dt.Shell.Wasm\bin\Debug\net5.0\dist&quot; --configuration Debug --targetframework net5.0 " stdoutLogEnabled="false" hostingModel="InProcess">
+      <aspNetCore processPath="C:\Program Files\dotnet\dotnet.exe" arguments="&quot;C:\Users\Daoting\.nuget\packages\uno.wasm.bootstrap.devserver\2.0.0\build\../tools/server/net5/dotnet-unowasm.dll&quot; serve   --pathbase &quot;D:\Dt\Client\Dt.Shell.Wasm\bin\Debug\net5.0\dist&quot; --configuration Debug --targetframework net5.0 " stdoutLogEnabled="false" hostingModel="InProcess">
         <environmentVariables>
           <environmentVariable name="ASPNETCORE_HTTPS_PORT" value="443" />
           <environmentVariable name="ASPNETCORE_ENVIRONMENT" value="Development" />
